style: styling updates (glassy-box navbar is buggy on mobile; lets see if that fixes)

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -1714,7 +1714,7 @@ figure.cover {
 }
 
 .glassy-box {
-  backdrop-filter: blur(4px);
+  backdrop-filter: blur(2.5px);
   background-image: linear-gradient(
     to top left,
     rgba(var(--global-theme-color-rgb), 0.15) 0%,
@@ -1730,13 +1730,13 @@ figure.cover {
 
 @media screen and (max-width: 575px) {
   .glassy-box-navbar {
-    backdrop-filter: blur(100px);
+    backdrop-filter: blur(5px);
     background-image: linear-gradient(
       to top left,
-      rgba(var(--global-theme-color-rgb), 0.15) 0%,
-      rgba(0, 0, 0, 0.0001) 20%,
-      rgba(0, 0, 0, 0.001) 50%,
-      rgba(0, 0, 0, 0.025) 100%
+      rgba(var(--global-theme-color-rgb), 0.25) 0%,
+      rgba(0, 0, 0, 0.025) 20%,
+      rgba(241, 241, 241, 0.05) 50%,
+      rgba(223, 223, 223, 0.1) 100%
     );
     border: rgba(var(--global-theme-color-rgb), 0.05) 1px solid !important;
     box-shadow: 0 0 10px rgba(var(--global-theme-color-rgb), 0.15);
